2006-01-28  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/ui/gnc-sxed-window-ui-full.xml: Add.
	* src/gnome/dialog-scheduledxaction.c (gnc_sxed_menu_entries) 
	(schedXact_editor_create_ledger)
	* src/gnome/dialog-sxsincelast.c (create_autoCreate_ledger) 
	(create_created_ledger, create_to_create_ledger) 
	(gnc_sxsld_menu_entries): Setup SX-related registers to only
	display and allow relevant register functionality. Bug#327642.

	* src/gnome/gnc-plugin-page-register.c
	(gnc_plugin_page_register_actions): Change stock icons for
	BlankTransaction and ScheduleTransaction Actions.

2006-01-28  Joshua Sled  <jsled@asynchronous.org>

	* lib/libgsf-1.12.3/gsf-gnome/Makefile.am (pkglib_LTLIBRARIES)
	* lib/libgsf-1.12.3/gsf/Makefile.am (pkglib_LTLIBRARIES)
	* lib/goffice-0.0.4/goffice/Makefile.am (pkglib_LTLIBRARIES)
	* configure.in: Use pkglib automake variables to install in a
	gnucash-specific hierearchy; change configure.in paths for goffice
	for similar reasons.  Bug#328858.

2006-01-25  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/glade/sched-xact.glade: Bug#327775: consistency in
	case of dialog title.
	Bug#327641: fix glade-spec'ed response-codes for OK/Cancel
	buttons, thus letting logic work again.

2006-01-28  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Revert aqbanking dependency. We still stick to
	1.0.0 because a) FC3 has AQBANKING 1.0.x, b) We can't find an
	AQBANKING 1.3 tarball -- the earliest we can find is 1.6, c)
	AQBANKING 1.6 doesn't build on FC3 because of dependencies

2006-01-28  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/file/gnc-owner-xml-v2.c:
	  GncOwner is not a QOF_INSTANCE.  Get the GUID correctly.
	  Fixes part of #328790 (but not all of it).

2006-01-28  Christian Stimming  <stimming@tuhh.de>

	* configure.in: For HBCI, require aqbanking >= 1.3.0 (released
	2005-08-11) since current aqbanking is beyond 1.9.x and those
	really old versions had to deal with very different packaging
	structure.
